--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
         "magento/framework": "*",
         "magento/module-store": "*",
         "magento/module-checkout": "*",
-        "smile/module-retailer-offer": "^1.3.0",
-        "smile/module-retailer": "^1.2.0"
+        "smile/module-retailer-offer": "~1.3.0",
+        "smile/module-retailer": "~1.2.0"
     },
     "require-dev": {
         "smile/magento2-smilelab-quality-suite": "^1.0.5"
